@@ -1009,7 +1009,7 @@
     <value>Lambda Expression Syntax Check</value>
   </data>
   <data name="KeitaiMailSourceString" xml:space="preserve">
-    <value>&lt;a href="http://twitter.com/" rel="nofollow"&gt;Keitai Mail&lt;/a&gt;</value>
+    <value>&lt;a href="https://twitter.com/" rel="nofollow"&gt;Keitai Mail&lt;/a&gt;</value>
   </data>
   <data name="NiconicoInfoText1" xml:space="preserve">
     <value>Title:</value>
