@@ -4,6 +4,7 @@
  * NEW: ダイレクトメッセージに添付された画像のサムネイル表示に対応
  * CHG: 「通信にHTTPSを使用する」の設定項目を削除
    - Twitter APIへの接続にSSLが必須となったため、常にHTTPSを使用して通信します
+ * CHG: Twitterのプロフィールページなどをブラウザで開く際のURLのスキームを http:// から https:// に変更しました
  * FIX: 設定ファイルの保存時に Setting*.xml.tmp ファイルが残ったまま設定が保存できなくなる問題の修正
 
 ==== Ver 1.1.6(2013/12/12)
